remove height from detailer to prevent table from overlapping with features.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,7 +74,6 @@ nav {
 .detailer {
   display: flex;
   justify-content: space-between;
-  height: 100%;
 }
 
 .sections {
